Matched header elements placment, font sizes, spacing, colors, (except icons) pixel perfect with prototype. Waiting for icons. https://github.com/wflaschka/atx/issues/44

--- a/src/assets/styles/flashflex/base/_typography.scss
+++ b/src/assets/styles/flashflex/base/_typography.scss
@@ -113,6 +113,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 2rem;
     font-weight: normal;
     color: $color-db;
+    word-wrap: break-word;
 
     small {
         font-family: $font-family-header-secondary;
@@ -292,6 +293,9 @@ hr[documentation] {
     height: 1px;
     background-color: $color-border;
     margin: 2rem 0;
+    &.m10 {
+        margin: p(10) 0;
+    }
     &.small {
         margin: 1rem 0;
     }
